# comexdata-etl

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
data/: export_data.parquet  import_data.parquet
src/: main.py
src/extract/: comex_stat_api.py
src/load/: snowflake_loader.py
src/transform/: dbt_project.yml
src/transform/models/marts/core/: dim_chapters.sql  dim_chapters.yml  dim_countries.sql  dim_countries.yml  dim_headings.sql  dim_headings.yml  dim_sections.sql  dim_sections.yml  dim_subheadings.sql  dim_subheadings.yml  fact_exports.sql  fact_exports.yml  fact_imports.sql  fact_imports.yml
src/transform/models/marts/dimensions/: _dimensions__models.yml  dim_chapters.sql  dim_countries.sql  dim_headings.sql  dim_sections.sql  dim_subheadings.sql
src/transform/models/marts/facts/: _facts__models.yml  fact_exports.sql  fact_imports.sql
src/transform/models/staging/comexstat/: _comexstat__models.yml  _comexstat__sources.yml
src/transform/models/staging/snowflake/: stg_snowflake.yml  stg_snowflake__exports.sql  stg_snowflake__imports.sql
tests/: test_hello.py
