[tool.poetry]
name = "comexdata-etl"
version = "0.1.0"
description = ""
authors = ["Pablo Mendes Faria <pablomendesfaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-material = "^9.5.49"
mkdocs-mermaid2-plugin = "^1.2.1"
taskipy = "^1.14.1"
isort = "^5.13.2"
blue = "^0.9.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "pytest -v"
doc = "mkdocs serve"
