[project]
name = "comexdata-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Mendes Faria",email = "pablomendesfaria@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dbt-core (>=1.9.1,<2.0.0)",
    "dbt-snowflake (>=1.9.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pip-system-certs (>=4.0,<5.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.14.1"

[tool.blue]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.taskipy.tasks]
format = "isort . && blue ."
dbt run = "dbt run --project-dir src/transform/"
run = "poetry run python src/main.py"
